Fix gradient opacity; Add new gradient color; fix Home styling and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,9 @@ body {
 }
 
 #App-content {
-  flex: 1 0 auto;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .App {
@@ -65,6 +67,6 @@ body {
   height: 100%;
   display: block;
   z-index: 0;
-  background-color: #d40d9b;
-  opacity: 0.33;
+  background: linear-gradient(to top, #7B00C1, #d40d9b);
+  opacity: 0.66;
 }
