--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Titillium Web", sans-serif;
-  background-image: url("./assets/bg.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
